# datacare

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  derivation.nix  flake.nix
.github/workflows/: datacare.yml
nixos-module/: default.nix
src/: main.rs  security.rs  structs.rs  utils.rs
src/routes/: auth.rs  correlate.rs  mod.rs  organization.rs  region.rs  station.rs  trekkie_runs.rs  user.rs
src/routes/trekkie/: correlate.rs  mod.rs  utils.rs
tests/: staging.py
tests/vm/: datacare.nix  default.nix  postgres.nix  test-salt
