[package]
name = "datacare"
version = "0.1.0"
edition = "2021"

[dependencies]
tlms = { version = "*", git = "https://github.com/tlm-solutions/tlms.rs", features = ["management", "telegrams"]}
clap = { version = "*", features = ["derive"] }

actix-web = "*"
actix-identity = "*"
actix-session= { version = "*", features = ["redis-actor-session"] }

# serde serialization / deserialization
serde_json = "*"
serde = { version = "*", features = ["derive"] }

# database
diesel = { version = "*", features = ["postgres", "r2d2", "uuid", "chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
r2d2 = "*"

# utils
uuid = { version = "*", features = ["serde", "v4"] }
env_logger = "*"
log = "*"
rand = "*"

utoipa = { version = "*", features = ["actix_extras"] }
regex = "*"
derive_more = "*"
