[package]
name = "datacare"
version = "0.3.1"
edition = "2021"

[dependencies]
tlms = { version = "0.9", git = "https://github.com/tlm-solutions/tlms.rs", features = ["management", "telegrams", "trekkie"]} # tag = "v0.8.0"
lofi = { version = "0.3", git = "https://github.com/tlm-solutions/lofi"}

clap = { version = "4", features = ["derive"] }

actix-web = "4"
actix-identity = "0"
actix-session= { version = "0", features = ["redis-actor-session"] }
actix-web-prom = "0"
actix-cors = "0"

# serde serialization / deserialization
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# database
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "0"

# utils
uuid = { version = "1", features = ["serde", "v4"] }
env_logger = "0"
log = "0"
rand = "0"

utoipa = { version = "3", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
regex = "1"
derive_more = "0"
chrono = "*"
futures = "0.3"
futures-util = "*"

ipnet = { version = "2", features = ["serde"] }
